fix: adds negative spread so drop shadow is only visible on bottom (#57)
* fix: adds negative spread so drop shadow is on bottom only

* Update Tokens

--- a/scss/helpers.scss
+++ b/scss/helpers.scss
@@ -15,7 +15,7 @@
 }
 
 @mixin shadow-navigation-02 {
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.4);
 }
 
 $overlay-01: linear-gradient(117.49deg, #0F0F0F 0%, rgba(15, 15, 15, 0.25) 31.88%, rgba(15, 15, 15, 0) 58.42%), linear-gradient(180deg, rgba(15, 15, 15, 0) 0%, rgba(15, 15, 15, 0.25) 67.57%, #0F0F0F 100%);
